--- a/app/views/resource_templates/index.html.erb
+++ b/app/views/resource_templates/index.html.erb
@@ -19,7 +19,7 @@
     </th>
 
     <th>
-      Section
+      tab
     </th>
 
     <th>
@@ -49,7 +49,7 @@
     </td>
 
     <td>
-      <%= resource.section_id %>
+      <%= resource.tab_id %>
     </td>
 
     <td>
