--- a/app/views/resource_templates/edit_form.html.erb
+++ b/app/views/resource_templates/edit_form.html.erb
@@ -23,10 +23,10 @@
     <input type="text" id="category" name="category" class="form-control" value="<%= @resource.category %>">
   </div>
 
-  <!-- input for section_id -->
+  <!-- input for tab_id -->
   <div class="form-group">
 
-    <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= @resource.section_id %>">
+    <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= @resource.tab_id %>">
   </div>
 
   <!-- Label and input for resource -->
