--- a/app/views/resource_templates/new_form.html.erb
+++ b/app/views/resource_templates/new_form.html.erb
@@ -25,10 +25,10 @@
     <input type="text" id="category" name="category" class="form-control" value="<%= @resource.try(:category) %>">
   </div>
 
-  <!-- Input for section_id -->
+  <!-- Input for tab_id -->
   <div class="form-group">
 
-    <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= params.fetch("section_id") %>">
+    <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
   </div>
 
   <!-- Label and input for resource -->
