--- a/app/views/tab_templates/edit_form.html.erb
+++ b/app/views/tab_templates/edit_form.html.erb
@@ -17,7 +17,7 @@
   <!-- Label and input for title -->
   <div class="form-group">
     <label for="title">
-      Title
+     Tab Title
     </label>
 
     <input type="text" id="title" name="title" class="form-control" value="<%= @tab.title %>">
