--- a/app/views/tab_templates/new_form.html.erb
+++ b/app/views/tab_templates/new_form.html.erb
@@ -19,7 +19,7 @@
   <!-- Label and input for title -->
   <div class="form-group">
     <label for="title">
-      Title
+      Tab Title
     </label>
 
     <input type="text" id="title" name="title" class="form-control" value="<%= @tab.try(:title) %>">
