--- a/app/views/topic_templates/show.html.erb
+++ b/app/views/topic_templates/show.html.erb
@@ -4,16 +4,17 @@
   <head>
 
   </head>
+  <body>
   <div class="container-fluid">
     <div class="row">
       <div class="col-2">
         <h2><%= @topic.title %></h2>
         <dl style="line-height:90%">
           <dt>
-            Engineering discipline
+            Discipline
           </dt>
           <dd>
-            <%= @topic.engineering_discipline %>
+            <%= @topic.discipline %>
           </dd>
           <dt>
             CSI section
@@ -63,44 +64,90 @@
         <div class="tab-content flex-column">
           <div class="tab-pane fade active show" id="summary" aria-labelledby="summary-tab">
 
-            <!--       ADD A SECTION-->
-
-            <form action="/sections/new" style="float: right;">
-              <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= Tab.where(topic_id: @topic.id).first.id %>">
-              <input type="hidden" id="topic_id" name="topic_id" class="form-control" value="<%= @topic.id %>">
-
-              <button type="submit" class="btn btn-primary">
-                Add a section
-              </button>
-            </form>
+      
 
             <a  href="/tabs/<%= Tab.where(topic_id: @topic.id).first.id %>/edit" style="float: right;">
               Edit the <%= Tab.where(topic_id: @topic.id).first.title %> tab
             </a>
 
-            <% Section.where(tab_id: Tab.where(topic_id: @topic.id).first.id).each do |section| %>
-                     <a href="/sections/<%= section.id %>/edit">Edit the <%= section.title %> Section</a>
+
+            <div class="container">
+
+              <% TextComponent.where(tab_id: Tab.where(topic_id: @topic.id).first.id).each do |text_component| %>
+                <h3><%= text_component.header %></h3>
+                <div><%= raw text_component.content %></div>
+                <form action="/text_components/<%= text_component.id %>/edit">
+                <input type="hidden" name="tab_id" id="tab_id" class="form-control" value="<%= text_component.tab_id %>">
+                <button type="submit" class="btn btn-link">Edit Text Component</button>
+                </form>
+                <hr>
+              <% end %>
+              <% Resource.where(tab_id: Tab.where(topic_id: @topic.id).first.id).each do |resource| %>
+                <h3><%= resource.category %></h3>
+                <h4><%= resource.created_at %></h4>
+                <img src="<%= resource.resource %>" class="img-responsive" style="max-height:auto; max-width:100%;">
+                <a href="<%= resource.resource %>"><%= resource.category %></a>
+                <div></div>
+               
+                <form action="/resources/<%= resource.id %>/edit">
+                <input type="hidden" name="tab_id" id="tab_id" class="form-control" value="<%= resource.tab_id %>">
+                 <button type="submit" class="btn btn-link">Edit Resource</button>
+                </form>
+                <hr>
+              <% end %>
+            </div>
+
+            <div class="form-inline">
+              <!--      ADD TEXT_COMPONENT-->
+              <form action="/text_components/new">
+                <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= Tab.where(topic_id: @topic.id).first.id %>">
+
+                <button type="submit" class="btn btn-primary">
+                  Add a text component
+                </button>
+              </form>
+              <!--     ADD RESOURCE FILE-->
+              <form action="/resources/new">
+                <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= Tab.where(topic_id: @topic.id).first.id %>">
+
+                <button type="submit" class="btn btn-primary">
+                  Add a resource
+                </button>
+              </form>
+            </div>
+            <hr>
+
+
+          </div>
+          <% Tab.where(topic_id: @topic.id).drop(1).each do|tab| %>
+            <div class="tab-pane fade" id="<%= tab.id %>" aria-labelledby="<%= tab.id %>-tab">
+       
+
+              <a href="/tabs/<%= tab.id %>/edit" style="float: right;">
+                Edit the <%= tab.title %> tab
+              </a>
+
+
+              
               <div class="container">
-                <h4><%= section.title %></h4>
-                <% TextComponent.where(section_id: section.id).each do |text_component| %>
+                
+                <% TextComponent.where(tab_id: tab.id).each do |text_component| %>
                   <h3><%= text_component.header %></h3>
-                  <div><%= raw text_component.content %></div>
+                  <p><%= raw text_component.content %></p>
                   <a href="/text_components/<%= text_component.id %>/edit"> Edit Text Component</a>
                 <% end %>
-                <% Resource.where(section_id: section.id).each do |resource| %>
+                <% Resource.where(tab_id: tab.id).each do |resource| %>
                   <h3><%= resource.category %></h3>
                   <h4><%= resource.created_at %></h4>
-                  <img src="<%= resource.resource %>" class="img-responsive" width="600px" height="600px">
-                  <div></div>
+                  <img src="<%= resource.resource %>" class="img-responsive" style="max-height:auto; max-width:100%;">
                   <a href="/resources/<%= resource.id %>/edit"> Edit Resource</a>
-
                 <% end %>
-              </div>
 
+              </div>
               <div class="form-inline">
                 <!--      ADD TEXT_COMPONENT-->
                 <form action="/text_components/new">
-                  <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= section.id %>">
+                  <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
 
                   <button type="submit" class="btn btn-primary">
                     Add a text component
@@ -108,71 +155,13 @@
                 </form>
                 <!--     ADD RESOURCE FILE-->
                 <form action="/resources/new">
-                  <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= section.id %>">
+                  <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
 
                   <button type="submit" class="btn btn-primary">
                     Add a resource
                   </button>
                 </form>
               </div>
-<hr>
-            <% end %>
-
-
-          </div>
-          <% Tab.where(topic_id: @topic.id).drop(1).each do|tab| %>
-            <div class="tab-pane fade" id="<%= tab.id %>" aria-labelledby="<%= tab.id %>-tab">
-              <!--       ADD A SECTION-->
-
-              <form action="/sections/new" style="float: right;">
-                <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
-                <input type="hidden" id="topic_id" name="topic_id" class="form-control" value="<%= @topic.id %>">
-
-                <button type="submit" class="btn btn-primary">
-                  Add a section
-                </button>
-              </form>
-
-              <a href="/tabs/<%= tab.id %>/edit" style="float: right;">
-                Edit the <%= tab.title %> tab
-              </a>
-
-              <% Section.where(tab_id: tab.id).each do |section| %>
-                 <a href="/sections/<%= section.id %>/edit">Edit the <%= section.title %> Section</a>
-                <div class="container">
-                  <h4><%= section.title %></h4>
-                  <% TextComponent.where(section_id: section.id).each do |text_component| %>
-                    <h3><%= text_component.header %></h3>
-                    <p><%= raw text_component.content %></p>
-                    <a href="/text_components/<%= text_component.id %>/edit"> Edit Text Component</a>
-                  <% end %>
-                  <% Resource.where(section_id: section.id).each do |resource| %>
-                    <h3><%= resource.category %></h3>
-                    <h4><%= resource.created_at %></h4>
-                    <img src="<%= resource.resource %>" class="img-responsive" width="600px" height="600px">
-                    <a href="/resources/<%= resource.id %>/edit"> Edit Resource</a>
-                  <% end %>
-
-                </div>
-                <div class="form-inline">
-                  <!--      ADD TEXT_COMPONENT-->
-                  <form action="/text_components/new">
-                    <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= section.id %>">
-
-                    <button type="submit" class="btn btn-primary">
-                      Add a text component
-                    </button>
-                  </form>
-                  <!--     ADD RESOURCE FILE-->
-                  <form action="/resources/new">
-                    <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= section.id %>">
-
-                    <button type="submit" class="btn btn-primary">
-                      Add a resource
-                    </button>
-                  </form>
-                </div>
-              <% end %>
 
 
             </div>
@@ -185,7 +174,7 @@
       <!--  Ads COLUMN-->
       <div class="col-2">
         <h4> Ads go here</h4>
-        <img style="max-height:auto; max-width:200px;" src="http://construction.krends.com/wp-content/uploads/2015/03/shutterstock_151394975.jpg">
+        <img style="max-height:auto; max-width:100%;" src="http://construction.krends.com/wp-content/uploads/2015/03/shutterstock_151394975.jpg">
 
 
       </div>
