--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -47,7 +47,7 @@ body, html {
 
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
-              <p>Total # of Contributors: <%= User.count %></p>
+              <p>Total # of Registered Users: <%= User.count %></p>
               <p>Total Number of Topics: <%= Topic.count %></p>
 
             </div>
