--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -48,7 +48,7 @@ body, html {
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
               <p>Total # of Registered Users: <%= User.count %></p>
-              <p>Total Number of Topics: <%= Topic.count %></p>
+              <p>Total Number of Guides: <%= Guide.count %></p>
 
             </div>
           </div>
@@ -71,7 +71,7 @@ body, html {
           <div class="card-header" id="headingThree">
             <h5 class="mb-0">
               <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                The Topic Template
+                The Guide Template
               </button>
             </h5>
           </div>
