--- a/app/views/guide_templates/new_form.html.erb
+++ b/app/views/guide_templates/new_form.html.erb
@@ -1,7 +1,7 @@
 <!-- Validation failure messages -->
-<% if @topic.present? %>
-  <% if @topic.errors.any? %>
-    <% @topic.errors.full_messages.each do |message| %>
+<% if @guide.present? %>
+  <% if @guide.errors.any? %>
+    <% @guide.errors.full_messages.each do |message| %>
       <div class="alert alert-danger">
         <%= message %>
       </div>
@@ -10,19 +10,19 @@
 <% end %>
 <div class="container">
 <h1>
-  Add a new topic
+  Add a new guide
 </h1>
 
 <hr>
 
-<form action="/create_topic" method="post">
+<form action="/create_guide" method="post">
   <!-- Label and input for csi_section -->
   <div class="form-group">
     <label for="csi_section">
       Csi section
     </label>
 
-    <input type="text" id="csi_section" name="csi_section" class="form-control" value="<%= @topic.try(:csi_section) %>">
+    <input type="text" id="csi_section" name="csi_section" class="form-control" value="<%= @guide.try(:csi_section) %>">
   </div>
 
   <!-- Label and input for title -->
@@ -31,7 +31,7 @@
       Title
     </label>
 
-    <input type="text" id="title" name="title" class="form-control" value="<%= @topic.try(:title) %>">
+    <input type="text" id="title" name="title" class="form-control" value="<%= @guide.try(:title) %>">
   </div>
 
   <!-- Label and input for discipline -->
@@ -43,13 +43,13 @@
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
-    Create topic
+    Create guide
   </button>
 </form>
 
 <hr>
 
-<a href="/topics">
+<a href="/guides">
   Go back
 </a>
 </div>
