--- a/app/views/tab_templates/new_form.html.erb
+++ b/app/views/tab_templates/new_form.html.erb
@@ -31,7 +31,7 @@
   <!--input for top_id -->
   <div class="form-group">
 
-    <input type="hidden" id="topic_id" name="topic_id" class="form-control" value="<%= params.fetch("topic_id") %>">
+    <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= params.fetch("guide_id") %>">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
